--- a/product/大数据与AI/万象优图2.0/API 文档/盲水印功能.md
+++ b/product/大数据与AI/万象优图2.0/API 文档/盲水印功能.md
@@ -60,8 +60,6 @@ Date: GMT Date
 Authorization: Auth String
 Pic-Operations: <PicOperations>
 
-
-
 [Object Content]
 ```
 
@@ -83,7 +81,7 @@ rules（json 数组）中每一项具体参数如下：
 | 参数名称 | 描述                                                         |类型   | 是否必选 | 
 | -------- | ------ | ----- | ------------------------------------------------------------ |
 | bucket   | 存储结果的目标存储桶名称，格式为：BucketName-APPID，如果不指定的话默认保存到当前存储桶 | String | 否       |
-| fileid   | 处理结果的文件路径名称，如以`/`开头，则存入指定文件夹中。否则，存入原图文件存储的相同目录 | String | 是       |
+| fileid   |     处理结果的文件路径名称。名称规则说明：<br>例如源文件的路径及文件名为：/p1/test1.jpg<br>1. 以`/`开头为绝对路径，例如 fileid 值为/p2/test2.jpg时，表示在p2文件夹中存储了一个文件名为 test2.jpg 的文件。<br>2. 不以`/`开头为相对路径，例如 fileid 值为 p2/test2.jpg 时，表示在p1文件夹中新建了一个p2文件夹，然后在p2文件夹中存储了一个文件名为 test2.jpg 的文件。<br>3. 注意：请不要以`/`结尾，否则会产生空文件名。                                           | String | 是       |
 | rule     | 处理参数，可参见图片处理 API。 若按指定样式处理，则以`style/`开头，后加样式名，如样式名为“test”，则 rule 字段为`style/test` | String | 是       |
 
 使用盲水印需在 rule 中添加水印图参数（watermark），示例格式如下：
@@ -186,8 +184,6 @@ Host: examplebucket-1250000000.cos.ap-chengdu.myqcloud.com
 Date: Tue, 03 Apr 2018 09:06:15 GMT
 Authorization:XXXXXXXXXXXX
 
-
-
 Pic-Operations:
 {
     "is_pic_info": 1,
@@ -210,8 +206,6 @@ Content-Length: 645
 Date: Tue, 03 Apr 2018 09:06:16 GMT
 Status: 200 OK
 x-cos-request-id: NWFjMzQ0MDZfOTBmYTUwXzZkZV8z****
-
-
 
 <UploadResult>
           <OriginalInfo>
@@ -241,8 +235,8 @@ x-cos-request-id: NWFjMzQ0MDZfOTBmYTUwXzZkZV8z****
 ```
 
 >!
->- 请求体的 filecontent 字段为原图的图片内容，请求头 Pic-Operations 的 rule 字段中，imageUrl 为水印图片地址。
->- 返回包 process_results 字段的 url 为携带盲水印的图片地址。
+>- 请求体的 [Object Content] 字段为原图的图片内容(二进制字符串)，请求头 Pic-Operations 的 rule 字段中，imageUrl 为水印图片的地址。
+>- 响应体的 ProcessResults 中的 Location 字段为处理后已经携带盲水印的图片的地址。
 
 
 ### 请求二：下载时添加盲水印
@@ -305,7 +299,7 @@ rules（json 数组）中每一项具体参数如下：
 | 参数名称 | 描述                                                         | 类型   | 是否必选 |
 | -------- | ------------------------------------------------------------ | ------ | -------- |
 | bucket   | 存储结果的目标存储桶名称，格式为：BucketName-APPID，如果不指定的话默认保存到当前存储桶 | String | 否       |
-| fileid   | 处理结果的文件路径名称，如以`/`开头，则存入指定文件夹中。否则，存入原图文件存储的相同目录 | String | 是       |
+| fileid   |     处理结果的文件路径名称。名称规则说明：<br>例如源文件的路径及文件名为：/p1/test1.jpg<br>1. 以`/`开头为绝对路径，例如 fileid 值为/p2/test2.jpg时，表示在p2文件夹中存储了一个文件名为 test2.jpg 的文件。<br>2. 不以`/`开头为相对路径，例如 fileid 值为 p2/test2.jpg 时，表示在p1文件夹中新建了一个p2文件夹，然后在p2文件夹中存储了一个文件名为 test2.jpg 的文件。<br>3. 注意：请不要以`/`结尾，否则会产生空文件名。                                           | String | 是       |
 | rule     | 处理参数，可参见图片处理 API。 若按指定样式处理，则以`style/`开头，后加样式名，如样式名为“test”，则 rule 字段为`style/test` | String | 是       |
 
 使用盲水印需在 rule 中添加水印图参数（watermark），示例格式如下：
@@ -406,6 +400,7 @@ POST /exampleobject?image_process HTTP/1.1
 Host: examplebucket-1250000000.cos.ap-chengdu.myqcloud.com
 Date: Tue, 03 Apr 2018 09:06:15 GMT
 Authorization:XXXXXXXXXXXX
+
 Pic-Operations:
 {
     "is_pic_info": 1,
@@ -426,8 +421,6 @@ Content-Length: 645
 Date: Tue, 03 Apr 2018 09:06:16 GMT
 Status: 200 OK
 x-cos-request-id: NWFjMzQ0MDZfOTBmYTUwXzZkZV8z****
-
-
 
 <UploadResult>
           <OriginalInfo>
@@ -471,8 +464,6 @@ Date: GMT Date
 Authorization:XXXXXXXXXXXX
 Pic-Operations: <PicOperations>
 
-
-
 [Object Content]
 ```
 
@@ -494,7 +485,7 @@ rules（json 数组）中每一项具体参数如下：
 | 参数名称 | 描述                                                         | 类型   | 是否必选 |
 | :------- | :----------------------------------------------------------- | :----- | :------- |
 | bucket   | 存储结果的目标存储桶名称，格式为：BucketName-APPID，如果不指定的话默认保存到当前存储桶 | String | 否       |
-| fileid   | 处理结果的文件路径名称，如以`/`开头，则存入指定文件夹中，否则，存入原图文件存储的同目录 | String | 是       |
+| fileid   |     处理结果的文件路径名称。名称规则说明：<br>例如源文件的路径及文件名为：/p1/test1.jpg<br>1. 以`/`开头为绝对路径，例如 fileid 值为/p2/test2.jpg时，表示在p2文件夹中存储了一个文件名为 test2.jpg 的文件。<br>2. 不以`/`开头为相对路径，例如 fileid 值为 p2/test2.jpg 时，表示在p1文件夹中新建了一个p2文件夹，然后在p2文件夹中存储了一个文件名为 test2.jpg 的文件。<br>3. 注意：请不要以`/`结尾，否则会产生空文件名。                                           | String | 是       |
 | rule     | 处理参数，请参见图片处理 API。 若按指定样式处理，则以`style/`开头，后加样式名，如样式名为“test”，则 rule 字段为`style/test` | String | 是       |
 
 提取盲水印需在 rule 中添加水印图参数（watermark），示例格式如下：
@@ -544,8 +535,6 @@ Host: examplebucket-1250000000.cos.ap-chengdu.myqcloud.com
 Date: Tue, 03 Apr 2018 09:06:15 GMT
 Authorization:XXXXXXXXXXXX
 
-
-
 Pic-Operations:
 {
     "is_pic_info": 1,
@@ -555,8 +544,6 @@ Pic-Operations:
     }]
 }
 Content-Length: 64
-
-
 
 [Object Content]
 ```
@@ -570,8 +557,6 @@ Content-Length: 645
 Date: Tue, 03 Apr 2018 09:06:16 GMT
 Status: 200 OK
 x-cos-request-id: NWFjMzQ0MDZfOTBmYTUwXzZkZV8z****
-
-
 
 <UploadResult>
       <OriginalInfo>
@@ -609,3 +594,5 @@ x-cos-request-id: NWFjMzQ0MDZfOTBmYTUwXzZkZV8z****
 ### 请求二：对 COS 上的图片提取盲水印
 
 对 COS 上的图片提取盲水印的请求包与 [云上数据处理](https://cloud.tencent.com/document/product/436/54050#.E4.BA.91.E4.B8.8A.E6.95.B0.E6.8D.AE.E5.A4.84.E7.90.86) 接口一致，只需在请求包头部增加图片处理参数 Pic-Operations 并使用提取盲水印参数（watermark/4）即可。
+
+	
