--- a/product/大数据与AI/万象优图2.0/API 文档/盲水印功能.md
+++ b/product/大数据与AI/万象优图2.0/API 文档/盲水印功能.md
@@ -81,7 +81,7 @@ rules（json 数组）中每一项具体参数如下：
 | 参数名称 | 描述                                                         |类型   | 是否必选 | 
 | -------- | ------ | ----- | ------------------------------------------------------------ |
 | bucket   | 存储结果的目标存储桶名称，格式为：BucketName-APPID，如果不指定的话默认保存到当前存储桶 | String | 否       |
-| fileid   |     处理结果的文件路径名称。名称规则说明：<br>例如源文件的路径及文件名为：/p1/test1.jpg<br>1. 以`/`开头为绝对路径，例如 fileid 值为/p2/test2.jpg时，表示在p2文件夹中存储了一个文件名为 test2.jpg 的文件。<br>2. 不以`/`开头为相对路径，例如 fileid 值为 p2/test2.jpg 时，表示在p1文件夹中新建了一个p2文件夹，然后在p2文件夹中存储了一个文件名为 test2.jpg 的文件。<br>3. 注意：请不要以`/`结尾，否则会产生空文件名。                                           | String | 是       |
+| fileid   |     处理结果的文件路径名称。名称规则说明：<br>例如源文件的路径及文件名为：/p1/test1.jpg<br>1. 以`/`开头为绝对路径，例如 fileid 值为 /p2/test2.jpg 时，表示在 p2 文件夹中存储了一个文件名为 test2.jpg 的文件。<br>2. 不以`/`开头为相对路径，例如 fileid 值为 p2/test2.jpg 时，表示在 p1 文件夹中新建了一个 p2 文件夹，然后在 p2 文件夹中存储了一个文件名为 test2.jpg 的文件。<br>3. 注意：请不要以`/`结尾，否则会产生空文件名。                                           | String | 是       |
 | rule     | 处理参数，可参见图片处理 API。 若按指定样式处理，则以`style/`开头，后加样式名，如样式名为“test”，则 rule 字段为`style/test` | String | 是       |
 
 使用盲水印需在 rule 中添加水印图参数（watermark），示例格式如下：
@@ -313,7 +313,7 @@ watermark/3/type/<type>/image/<imageUrl>/text/<text>/level/<level>
 | 参数  | 描述                                                         | 类型   | 是否必选 |
 | ----- | ------------------------------------------------------------ | ------ | -------- |
 | type  | 盲水印类型，有效值：1为半盲水印；2为全盲水印；3为文字盲水印  | Int    | 是       |
-| image | 盲水印图片地址，需要经过 URL 安全的 Base64 编码。当 type 为1或2时必填，type 为3时无效。指定的水印图片必须同时满足如下条件：<br>1. 盲水印图片与原图片必须位于同一个存储桶下；<br>2. URL 必须以`http://`开始，不能省略 http 头，也不能填 https 头，例如以下地址为非法水印地址：<li> examplebucket-1250000000.cos.ap-shanghai.myqcloud.com/watermark.png <li>https://examplebucket-1250000000.cos.ap-shanghai.myqcloud.com/watermark.png | String | 否       |
+| image | 盲水印图片地址，需要经过 URL 安全的 Base64 编码。当 type 为1或2时必填，type 为3时无效。指定的水印图片必须同时满足如下条件：<br>1. 盲水印图片与原图片必须位于同一个存储桶下。<br>2. URL 必须以`http://`开始，不能省略 http 头，也不能填 https 头，例如以下地址为非法水印地址：<li> examplebucket-1250000000.cos.ap-shanghai.myqcloud.com/watermark.png <li>https://examplebucket-1250000000.cos.ap-shanghai.myqcloud.com/watermark.png | String | 否       |
 | text  | 盲水印文字，需要经过 URL 安全的 Base64 编码。当 type 为3时必填，type 为1或2时无效。 | String | 否       |
 | level | 只对全盲水印（type=2）有效。level 的取值范围为{1,2,3}，默认值为1，level 值越大则图片受影响程度越大、盲水印效果越好。 | Int    | 否       |
 
@@ -485,7 +485,7 @@ rules（json 数组）中每一项具体参数如下：
 | 参数名称 | 描述                                                         | 类型   | 是否必选 |
 | :------- | :----------------------------------------------------------- | :----- | :------- |
 | bucket   | 存储结果的目标存储桶名称，格式为：BucketName-APPID，如果不指定的话默认保存到当前存储桶 | String | 否       |
-| fileid   |     处理结果的文件路径名称。名称规则说明：<br>例如源文件的路径及文件名为：/p1/test1.jpg<br>1. 以`/`开头为绝对路径，例如 fileid 值为/p2/test2.jpg时，表示在p2文件夹中存储了一个文件名为 test2.jpg 的文件。<br>2. 不以`/`开头为相对路径，例如 fileid 值为 p2/test2.jpg 时，表示在p1文件夹中新建了一个p2文件夹，然后在p2文件夹中存储了一个文件名为 test2.jpg 的文件。<br>3. 注意：请不要以`/`结尾，否则会产生空文件名。                                           | String | 是       |
+| fileid   |     处理结果的文件路径名称。名称规则说明：<br>例如源文件的路径及文件名为：/p1/test1.jpg<br>1. 以`/`开头为绝对路径，例如 fileid 值为 /p2/test2.jpg 时，表示在 p2 文件夹中存储了一个文件名为 test2.jpg 的文件。<br>2. 不以`/`开头为相对路径，例如 fileid 值为 p2/test2.jpg 时，表示在 p1 文件夹中新建了一个 p2 文件夹，然后在 p2 文件夹中存储了一个文件名为 test2.jpg 的文件。<br>3. 注意：请不要以`/`结尾，否则会产生空文件名。                                           | String | 是       |
 | rule     | 处理参数，请参见图片处理 API。 若按指定样式处理，则以`style/`开头，后加样式名，如样式名为“test”，则 rule 字段为`style/test` | String | 是       |
 
 提取盲水印需在 rule 中添加水印图参数（watermark），示例格式如下：
@@ -499,7 +499,7 @@ watermark/4/type/<type>/image/<imageUrl>
 | 参数  | 描述                                                         | 类型   | 是否必选 |
 | :---- | :----------------------------------------------------------- | :----- | :------- |
 | type  | 盲水印类型，有效值：1为半盲水印；2为全盲水印；3为文字盲水印，**必须跟添加盲水印时的 type 类型一致**。 | Int    | 是       |
-| image | 图片地址，根据 type 值填写：<br><li>当 type 为1，则 image 必填，且为原图图片地址；<br><li>当 type 为2，则 image 必填，且为水印图地址；<br><li>当 type 为3，则 image 无需填写（无效）。<br>image 需要经过 URL 安全的 Base64 编码，指定的图片必须同时满足如下条件：<br>1. 图片与存在水印的图片必须位于同一个对象存储桶下； <br>2. URL 必须以`http://`开始，不能省略 http 头，也不能填 https 头，例如以下地址为非法水印地址：<li> examplebucket-1250000000.cos.ap-shanghai.myqcloud.com/watermark.png <li>https://examplebucket-1250000000.cos.ap-shanghai.myqcloud.com/watermark.png | String | 否       |
+| image | 图片地址，根据 type 值填写：<br><li>当 type 为1，则 image 必填，且为原图图片地址。<br><li>当 type 为2，则 image 必填，且为水印图地址。<br><li>当 type 为3，则 image 无需填写（无效）。<br>image 需要经过 URL 安全的 Base64 编码，指定的图片必须同时满足如下条件：<br>1. 图片与存在水印的图片必须位于同一个对象存储桶下。 <br>2. URL 必须以`http://`开始，不能省略 http 头，也不能填 https 头，例如以下地址为非法水印地址：<li> examplebucket-1250000000.cos.ap-shanghai.myqcloud.com/watermark.png <li>https://examplebucket-1250000000.cos.ap-shanghai.myqcloud.com/watermark.png | String | 否       |
 
 #### 请求参数
 
@@ -586,9 +586,9 @@ x-cos-request-id: NWFjMzQ0MDZfOTBmYTUwXzZkZV8z****
 ```
 
 >!
->
 >- 对于 type 值为1的请求，请求头 Pic-Operations 的 rule 字段中，imageUrl 为未添加盲水印的原图地址；对于 type 值为2的请求，包头 Pic-Operations 的 rule 字段中，imageUrl 为水印图的地址。
 >- 响应体 ProcessResults 字段的 url 为提取出来的水印图地址。
+>
 
 
 ### 请求二：对 COS 上的图片提取盲水印
