--- a/product/大数据与AI/万象优图2.0/API 文档/盲水印功能.md
+++ b/product/大数据与AI/万象优图2.0/API 文档/盲水印功能.md
@@ -81,7 +81,7 @@ rules（json 数组）中每一项具体参数如下：
 | 参数名称 | 描述                                                         |类型   | 是否必选 | 
 | -------- | ------ | ----- | ------------------------------------------------------------ |
 | bucket   | 存储结果的目标存储桶名称，格式为：BucketName-APPID，如果不指定的话默认保存到当前存储桶 | String | 否       |
-| fileid   |     处理结果的文件路径名称。名称规则说明：<br>例如源文件的路径及文件名为：/p1/test1.jpg<br>1. 以`/`开头为绝对路径，例如 fileid 值为 /p2/test2.jpg 时，表示在 p2 文件夹中存储了一个文件名为 test2.jpg 的文件。<br>2. 不以`/`开头为相对路径，例如 fileid 值为 p2/test2.jpg 时，表示在 p1 文件夹中新建了一个 p2 文件夹，然后在 p2 文件夹中存储了一个文件名为 test2.jpg 的文件。<br>3. 注意：请不要以`/`结尾，否则会产生空文件名。                                           | String | 是       |
+| fileid   |     处理后文件的保存路径及名称。名称规则说明：<br>例如源文件的路径及文件名为：/p1/test1.jpg<br>1. 以`/`开头为绝对路径，例如 fileid 值为 /p2/test2.jpg 时，表示在 p2 文件夹中存储了一个文件名为 test2.jpg 的文件。<br>2. 不以`/`开头为相对路径，例如 fileid 值为 p2/test2.jpg 时，表示在 p1 文件夹中新建了一个 p2 文件夹，然后在 p2 文件夹中存储了一个文件名为 test2.jpg 的文件。<br>3. 注意：请不要以`/`结尾，否则会产生空文件名。                                           | String | 是       |
 | rule     | 处理参数，可参见图片处理 API。 若按指定样式处理，则以`style/`开头，后加样式名，如样式名为“test”，则 rule 字段为`style/test` | String | 是       |
 
 使用盲水印需在 rule 中添加水印图参数（watermark），示例格式如下：
@@ -299,7 +299,7 @@ rules（json 数组）中每一项具体参数如下：
 | 参数名称 | 描述                                                         | 类型   | 是否必选 |
 | -------- | ------------------------------------------------------------ | ------ | -------- |
 | bucket   | 存储结果的目标存储桶名称，格式为：BucketName-APPID，如果不指定的话默认保存到当前存储桶 | String | 否       |
-| fileid   |     处理结果的文件路径名称。名称规则说明：<br>例如源文件的路径及文件名为：/p1/test1.jpg<br>1. 以`/`开头为绝对路径，例如 fileid 值为/p2/test2.jpg时，表示在p2文件夹中存储了一个文件名为 test2.jpg 的文件。<br>2. 不以`/`开头为相对路径，例如 fileid 值为 p2/test2.jpg 时，表示在p1文件夹中新建了一个p2文件夹，然后在p2文件夹中存储了一个文件名为 test2.jpg 的文件。<br>3. 注意：请不要以`/`结尾，否则会产生空文件名。                                           | String | 是       |
+| fileid   |     处理后文件的保存路径及名称。名称规则说明：<br>例如源文件的路径及文件名为：/p1/test1.jpg<br>1. 以`/`开头为绝对路径，例如 fileid 值为/p2/test2.jpg时，表示在p2文件夹中存储了一个文件名为 test2.jpg 的文件。<br>2. 不以`/`开头为相对路径，例如 fileid 值为 p2/test2.jpg 时，表示在p1文件夹中新建了一个p2文件夹，然后在p2文件夹中存储了一个文件名为 test2.jpg 的文件。<br>3. 注意：请不要以`/`结尾，否则会产生空文件名。                                           | String | 是       |
 | rule     | 处理参数，可参见图片处理 API。 若按指定样式处理，则以`style/`开头，后加样式名，如样式名为“test”，则 rule 字段为`style/test` | String | 是       |
 
 使用盲水印需在 rule 中添加水印图参数（watermark），示例格式如下：
@@ -485,7 +485,7 @@ rules（json 数组）中每一项具体参数如下：
 | 参数名称 | 描述                                                         | 类型   | 是否必选 |
 | :------- | :----------------------------------------------------------- | :----- | :------- |
 | bucket   | 存储结果的目标存储桶名称，格式为：BucketName-APPID，如果不指定的话默认保存到当前存储桶 | String | 否       |
-| fileid   |     处理结果的文件路径名称。名称规则说明：<br>例如源文件的路径及文件名为：/p1/test1.jpg<br>1. 以`/`开头为绝对路径，例如 fileid 值为 /p2/test2.jpg 时，表示在 p2 文件夹中存储了一个文件名为 test2.jpg 的文件。<br>2. 不以`/`开头为相对路径，例如 fileid 值为 p2/test2.jpg 时，表示在 p1 文件夹中新建了一个 p2 文件夹，然后在 p2 文件夹中存储了一个文件名为 test2.jpg 的文件。<br>3. 注意：请不要以`/`结尾，否则会产生空文件名。                                           | String | 是       |
+| fileid   |     处理后文件的保存路径及名称。名称规则说明：<br>例如源文件的路径及文件名为：/p1/test1.jpg<br>1. 以`/`开头为绝对路径，例如 fileid 值为 /p2/test2.jpg 时，表示在 p2 文件夹中存储了一个文件名为 test2.jpg 的文件。<br>2. 不以`/`开头为相对路径，例如 fileid 值为 p2/test2.jpg 时，表示在 p1 文件夹中新建了一个 p2 文件夹，然后在 p2 文件夹中存储了一个文件名为 test2.jpg 的文件。<br>3. 注意：请不要以`/`结尾，否则会产生空文件名。                                           | String | 是       |
 | rule     | 处理参数，请参见图片处理 API。 若按指定样式处理，则以`style/`开头，后加样式名，如样式名为“test”，则 rule 字段为`style/test` | String | 是       |
 
 提取盲水印需在 rule 中添加水印图参数（watermark），示例格式如下：
