--- a/product/计算与网络/事件总线/快速入门/告警推送配置与管理.md
+++ b/product/计算与网络/事件总线/快速入门/告警推送配置与管理.md
@@ -1,13 +1,13 @@
->! 云监控事件中心相关功能将于10月31日起逐步下线，相关能力将由事件总线承载，并在原有功能上新增规则匹配、自定义事件集、多目标投递等特性。为保证您的事件相关服务可以正常使用，9月30日起，我们建议您开通事件总线产品并进行能力迁移，我们也提供[一键迁移](#1)服务，该操作不会产生额外费用。
+>! 云监控事件中心相关功能将于2021年10月31日起逐步下线，相关能力将由事件总线承载，并在原有功能上新增规则匹配、自定义事件集、多目标投递等特性。为保证您的事件相关服务可以正常使用，2021年9月30日起，您需要开通事件总线产品并进行能力迁移，我们也提供 [一键迁移](#1) 服务，该操作不会产生额外费用。
 
-### 场景简介
+## 场景简介
 开启腾讯云事件总线服务后，将为您自动在广州地域创建默认云服务事件集，所有已接入事件告警的产品将自动完成事件的投递，您可以通过配置事件规则、投递目标等方式，完成告警链路的配置。
 
-> 事件告警推送能力将于9月底正式上线
+>! 事件告警推送能力将于2021年10月15日正式上线。
 
-### 告警配置步骤
-#### 1. 查看事件列表
-登陆[事件总线控制台](https://console.cloud.tencent.com/eb)，进入**云服务默认事件集**，可以查看目前已经接入的所有云服务事件
+## 告警配置步骤
+### 1. 查看事件列表
+登录 [事件总线控制台](https://console.cloud.tencent.com/eb)，进入**云服务默认事件集**，查看目前已经接入的所有云服务事件。
 
 投递标准事件格式如下：
 ```json
@@ -30,7 +30,7 @@
     "status":"1",
     "data":{
         "appId":"1250000011",
-        "instanceId":"ins-sjdksjk",
+        "instanceId":"ins-xxxxxxx",
         "projectId":"11",
         "dimensions":{
             "ip":"127.0.0.1"
@@ -41,11 +41,12 @@
     }
 }
 ```
-字段说明
+
+#### 字段说明
 
 | 字段            | 描述                                                         | 字符串类型 |
 | --------------- | ------------------------------------------------------------ | ---------- |
-| specversion     | 事件结构体版本（cloudevents 遵循版本，目前为1.0.2）。        | String     |
+| specversion     | 事件结构体版本（cloudevents 遵循版 本，目前为1.0.2）。        | String     |
 | id              | PUT Event 返回的 ID 信息。                                   | String     |
 | type            | PUT Event 输入的事件类型。云服务告警事件标准格式为 `${ProductName}:ErrorEvent:${EventType}`，用 “:” 分割类型字段。 | String     |
 | source          | 事件来源（云服务事件必传此参数，为 subjuect 的缩写 ）。云服务默认为 `xxx.cloud.tencent`。 | String     |
@@ -53,31 +54,32 @@
 | timer           | 发生事件的时间，0时区毫秒时间戳，例如1615430559146。         | Timestamp  |
 | datacontenttype | 数据类型申明。                                               | String     |
 | region          | 地域信息。                                                   | String     |
-|tags| 资源标签 |String|
-| data            | PUT Event 输入的事件详情，各个业务方可以自定义                                   | String     |
+|tags| 资源标签。 |String|
+| data            | PUT Event 输入的事件详情，各个业务方可以自定义。                                   | String     |
 
 
 
-#### 2. 配置告警事件规则
+### 2. 配置告警事件规则
 
 进入**事件规则**页面，选择对应的事件集后，在事件集下创建事件规则，完成需要配置告警推送的事件筛选。
-以 CVM 告警配置为例，您可以选择指定的事件告警类型，也可以选择全部告警事件，详细事件匹配规则请参考文档[管理事件规则](https://cloud.tencent.com/document/product/1359/56084)。
+以 CVM 告警配置为例，您可以选择指定的事件告警类型，也可以选择全部告警事件，详细事件匹配规则请参见 [管理事件规则](https://cloud.tencent.com/document/product/1359/56084)。
 
-#### 3. 配置推送目标
+### 3. 配置推送目标
 
-事件告警场景下，建议同时配置**CLS日志**投递与**消息推送**两个投递目标
-- CLS 日志投递：将您的告警事件投递至默认的事件总线日志集，日志自动为您保留30天，方便您对已投递的告警事件随时进行追溯，更多详情，请参考；
-- 消息推送：通过配置消息推送，将您的告警事件推送至指定的消息接收渠道，完成用户及时触达
+事件告警场景下，建议同时配置 **CLS 日志**投递与**消息推送**两个投递目标。
+- **CLS 日志投递**：将您的告警事件投递至默认的事件总线日志集，日志自动为您保留30天，方便您对已投递的告警事件随时进行追溯。
+- **消息推送**：通过配置消息推送，将您的告警事件推送至指定的消息接收渠道，完成用户及时触达。
 
 配置完成后，即可在腾讯云事件总线控制台，完成告警事件的查看与推送配置。
 
 <span id="1"></span>
-### 存量用户一键迁移
+## 存量用户一键迁移
 对于事件中心的存量用户，事件总线提供了**一键迁移**的能力，选择一键迁移后，后台服务将自动为您进行以下操作：
 
-1. 为默认云服务事件集创建 CLS 日志集 Target，完成事件投递
-2. 事件中心存量告警策略自动转化为云服务事件集的事件规则（一条策略对应一个规则）
-3. 为事件中心每个存量通知模版创建对应消息推送 Target，绑定在默认云服务事件集上，完成告警推送
+1. 为默认云服务事件集创建 CLS 日志集 Target，完成事件投递。
+2. 事件中心存量告警策略自动转化为云服务事件集的事件规则（一条策略对应一个规则）。
+3. 为事件中心每个存量通知模版创建对应消息推送 Target，绑定在默认云服务事件集上，完成告警推送。
 
->- 事件总线为您创建的默认日志集将享有每月 1 GB 的日志存储免费额度
+>?
+>-  事件总线为您创建的默认日志集将享有每月1GB的日志存储免费额度。
 >- 一键迁移可以重复操作，每次将以事件中心存量配置为基准，**全覆盖**更新您在事件总线产品页面的事件规则与投递目标。
