--- a/product/数据库/数据传输服务DTS/校验不通过及处理方法/检查项汇总.md
+++ b/product/数据库/数据传输服务DTS/校验不通过及处理方法/检查项汇总.md
@@ -1,33 +1,33 @@
 各数据库迁移、同步、订阅过程中的校验项检查如下，如果发生校验项报错，请参考对应指导进行修复。
 
 ## MySQL/TDSQL-C
-- [连接DB检查](https://cloud.tencent.com/document/product/571/58685) 
+- [连接 DB 检查](https://cloud.tencent.com/document/product/571/58685) 
 - [周边检查](https://cloud.tencent.com/document/product/571/58690) 
 - [版本检查](https://cloud.tencent.com/document/product/571/58696) 
 - [源实例权限检查](https://cloud.tencent.com/document/product/571/58700) 
 - [部分实例参数检查](https://cloud.tencent.com/document/product/571/58701) 
 - [目标实例内容冲突检查](https://cloud.tencent.com/document/product/571/58704) 
 - [目标实例空间检查](https://cloud.tencent.com/document/product/571/58707) 
-- [Binlog参数检查](https://cloud.tencent.com/document/product/571/58708) 
+- [Binlog 参数检查](https://cloud.tencent.com/document/product/571/58708) 
 - [外键依赖检查](https://cloud.tencent.com/document/product/571/58736) 
 - [视图检查](https://cloud.tencent.com/document/product/571/58737) 
 - [警告项检查](https://cloud.tencent.com/document/product/571/58737) 
 - [RDS检查](https://cloud.tencent.com/document/product/571/58740)  
 
 ## TDSQL MySQL
-- [连接DB检查](https://cloud.tencent.com/document/product/571/58685)
+- [连接 DB 检查](https://cloud.tencent.com/document/product/571/58685)
 - [周边检查](https://cloud.tencent.com/document/product/571/58690) 
 - [版本检查](https://cloud.tencent.com/document/product/571/58696)                                                    
 - 目标实例和源实例表结构检查
 - [部分实例参数检查](https://cloud.tencent.com/document/product/571/58701)  
-- 检查表是否是InnoDB表
-- 检查待迁移表的DDL
+- 检查表是否是 InnoDB 表
+- 检查待迁移表的 DDL
 - 检查待迁移的表是否有主键
 - [源实例权限检查](https://cloud.tencent.com/document/product/571/58700)
 - [目标实例权限检查](https://cloud.tencent.com/document/product/571/58700)
 - [目标实例内容冲突检查](https://cloud.tencent.com/document/product/571/58704) 
 - [目标实例空间检查](https://cloud.tencent.com/document/product/571/58707)
-- [Binlog参数检查](https://cloud.tencent.com/document/product/571/58708) 
+- [Binlog 参数检查](https://cloud.tencent.com/document/product/571/58708) 
 - [外键依赖检查](https://cloud.tencent.com/document/product/571/58736) 
 - 视图一般项检查
 - 检查视图之间以及视图和表之间的互相依赖
@@ -35,7 +35,6 @@
 - 源实例迁移库和目标实例系统库冲突检查
 
 ## PostgreSQL
-
 - [源实例连通性检查](https://cloud.tencent.com/document/product/571/58685)
 - [源实例版本检查](https://cloud.tencent.com/document/product/571/58696)
 - [源实例权限检查](https://cloud.tencent.com/document/product/571/58700)
@@ -48,21 +47,19 @@
 - [增量迁移预置条件检查](https://cloud.tencent.com/document/product/571/60023)
 
 ## MongoDB
-
-- [连接MongoDB实例校验](https://cloud.tencent.com/document/product/571/58685)
-- [库表冲突校验][https://cloud.tencent.com/document/product/571/58704]
+- [连接 MongoDB 实例校验](https://cloud.tencent.com/document/product/571/58685)
+- [库表冲突校验](https://cloud.tencent.com/document/product/571/58704)
 - [源端节点角色校验](https://cloud.tencent.com/document/product/571/60609)
-- [Oplog校验](https://cloud.tencent.com/document/product/571/60607)
+- [Oplog 校验](https://cloud.tencent.com/document/product/571/60607)
 - [源端账户权限校验](https://cloud.tencent.com/document/product/571/58700)
 - [目的端账户权限校验](https://cloud.tencent.com/document/product/571/58700)
 - [实例版本校验](https://cloud.tencent.com/document/product/571/58696)
 - [实例容量校验](https://cloud.tencent.com/document/product/571/58707)
 - [目的端负载校验](https://cloud.tencent.com/document/product/571/60611)
 - [片建校验](https://cloud.tencent.com/document/product/571/60610)
-- [源端Balancer校验](https://cloud.tencent.com/document/product/571/60608)
+- [源端 Balancer 校验](https://cloud.tencent.com/document/product/571/60608)
 
 ## SQL Server
-
 - [迁移参数检查](https://cloud.tencent.com/document/product/571/58704)
 - [迁移网络检查](https://cloud.tencent.com/document/product/571/61281)
 - [源库连接性检查](https://cloud.tencent.com/document/product/571/61277)
@@ -72,3 +69,4 @@
 - [用户权限检查](https://cloud.tencent.com/document/product/571/58700)
 - [源库存在性检查](https://cloud.tencent.com/document/product/571/61277)
 - [目的库存在性检查](https://cloud.tencent.com/document/product/571/61280)
+
