--- a/product/数据库/云数据库MySQL/动态与公告/公告/参数模版及新购实例优化.md
+++ b/product/数据库/云数据库MySQL/动态与公告/公告/参数模版及新购实例优化.md
@@ -29,44 +29,44 @@
 | innodb_table_drop_mode                 | SYNC_DROP                 | ASYNC_DROP             | SYNC_DROP         |    
 | innodb_flush_log_at_trx_commit         | 2                         | 2                                 | 1                                 |   
 
-详细设置请参考 [设置实例参数（新）]()。
+详细设置请参考 [设置实例参数](https://cloud.tencent.com/document/product/236/42500)。
 
 ### 新增可设置参数
 
 | 参数名                                               |  5.6  | 5.7  | 8.0  | 
 | ------------------------------------------------ | -------- | ---- | ---- |
-| character_set_client                           |                 |  &#10003;    |      |   
-| default_password_lifetime                   |                |  &#10003;    |  &#10003;    |    
-| innodb_alter_table_default_algorithm   |                |  &#10003;    |      |    
-| innodb_async_truncate_size                |                |  &#10003;    |  &#10003;    |     
-| innodb_async_truncate_work_enabled  |               | &#10003;     |      |    
+| character_set_client                           |     -            |  &#10003;    |  -    |   
+| default_password_lifetime                   |      -          |  &#10003;    |  &#10003;    |    
+| innodb_alter_table_default_algorithm   |      -          |  &#10003;    |   -   |    
+| innodb_async_truncate_size                |      -          |  &#10003;    |  &#10003;    |     
+| innodb_async_truncate_work_enabled  |     -          | &#10003;     |    -  |    
 | innodb_buffer_pool_instances              |  &#10003; |  &#10003;   |  &#10003;   |     
 | innodb_buffer_pool_size                      |  &#10003; |  &#10003;   |  &#10003;   |     
-| innodb_default_row_format                  |                | &#10003;     | &#10003;    |    
-| innodb_fast_ahi_cleanup_for_drop_table |             |                    | &#10003;     |      
-| innodb_flush_redo_using_fdatasync     |                |                    | &#10003;    |      
-| innodb_page_cleaners                         |               | &#10003;     | &#10003;     |      
-| innodb_table_drop_mode                     |               |                   | &#10003;     |      
-| innodb_temp_tablespace_fast_cleanup |               |                   | &#10003;     |      
-| innodb_undo_tablespaces                    |   &#10003; |                  |        |   
-| internal_tmp_mem_storage_engine       |               |                  | &#10003;    |      
-| slave_net_timeout                               |  &#10003; | &#10003;     |      |      
-| slave_parallel_type                             |  &#10003; |                  |      |     
+| innodb_default_row_format                  |       -         | &#10003;     | &#10003;    |    
+| innodb_fast_ahi_cleanup_for_drop_table |     -        |      -              | &#10003;     |      
+| innodb_flush_redo_using_fdatasync     |       -         |      -              | &#10003;    |      
+| innodb_page_cleaners                         |       -        | &#10003;     | &#10003;     |      
+| innodb_table_drop_mode                     |      -         |      -             | &#10003;     |      
+| innodb_temp_tablespace_fast_cleanup |       -        |       -            | &#10003;     |      
+| innodb_undo_tablespaces                    |   &#10003; |         -         |  -      |   
+| internal_tmp_mem_storage_engine       |       -        |      -            | &#10003;    |      
+| slave_net_timeout                               |  &#10003; | &#10003;     |   -   |      
+| slave_parallel_type                             |  &#10003; |          -        |  -    |     
 | slave_parallel_workers                        |  &#10003; | &#10003;   |&#10003;    |      
-| sort_buffer_size                                  |  &#10003; |                  |      |     
-| temptable_use_mmap                          |                 |                  | &#10003;    |      
+| sort_buffer_size                                  |  &#10003; |    -              |  -    |     
+| temptable_use_mmap                          |           -      |      -            | &#10003;    |      
 | thread_handling                                  |   &#10003; | &#10003;   |&#10003;   |      
-| thread_handling_switch_mode             |                  |                   | &#10003;   |     
+| thread_handling_switch_mode             |        -          |         -          | &#10003;   |     
 | thread_pool_oversubscribe                  |   &#10003; | &#10003;    |&#10003;    |      
-| thread_pool_size                                |                  | &#10003;    | &#10003;   |      
-| tx_isolation                                        |                  | &#10003;    | &#10003;    |      
+| thread_pool_size                                |        -          | &#10003;    | &#10003;   |      
+| tx_isolation                                        |          -        | &#10003;    | &#10003;    |      
 
 ### 各模版性能测试
 测试结果如下：
 ![](https://main.qcloudimg.com/raw/06edf8f531641e078a1171226bd0ebf5.png)
 ![](https://main.qcloudimg.com/raw/693e9d25c5976ea081a98da7da8a36ea.png)
 ![](https://main.qcloudimg.com/raw/14d529ee5dd107cc0b6a8bc92dffb83c.png)
-详细性能测试数据请参见 [参数模版性能对比]()。
+详细性能测试数据请参见 [参数模版性能对比](https://cloud.tencent.com/document/product/236/61636)。
 
 ### 如何保留默认参数模版
 在新参数系统上线后，默认参数模版将会被高性能参数模版以及高稳定性模版替代，在新参数系统上线前依然可以通过创建参数模版的方式保留默认参数模版的设置。
@@ -81,7 +81,7 @@
 部分参数支持公式进行定义，该类参数可以跟随规格的变化而变化，使得数据库始终运行在最佳配置下。
 表达式语法的相关支持详见下表。
 
-| 类型 | 说明 | 公式 | 
+| 支持类别 | 说明 | 样例 | 
 | ------ | ------------------------------------------------------------ | --------------------- | 
 | 变量   | <li>DBinitMemory：实例规格的内存大小，整数型。例如，实例规格的内存大小为4000MB，则 DBinitMemory 的值为4000。 <li>DBInitCpu：实例规格的 CPU 核数，整数型。   说明云数据库 MySQL 的 innodb_buffer_pool_size 参数设置必须保持在内存大小的50% - 90%之间，当设置的数值大于90%时，会自动设置为90%；当设置的数值小于于50%时，会自动设置为50%。 | {DBinitMemory*786432} |    
 | 运算符 | 公式语法：使用 {} 包裹。 <li>除法运算符（/）：用被除数除以除数，返回整数型商。如果计算结果为小数，会截断取整数部分。不支持小数，例如系统支持 {MIN(DBInitMemory/4+500,1000000)}，不支持 {MIN(DBInitMemory\*0.25+500,1000000)}。<li> 乘法运算符（*）：两个乘数相乘，返回整数型积。如果计算结果为小数，会截断取整数部分。不支持小数运算。 |  -                     |    
