--- a/product/数据库/数据传输服务DTS/数据迁移(NewDTS)/01 数据迁移支持的数据库.md
+++ b/product/数据库/数据传输服务DTS/数据迁移(NewDTS)/01 数据迁移支持的数据库.md
@@ -1,5 +1,5 @@
 
-腾讯云 DTS 支持如下方式的数据库迁移。
+腾讯云 DTS 支持自建数据库、云数据库和其他云厂商数据库的迁移，具体的网络接入方式如下。
 - 公网：通过公网 IP 接入的自建数据库。
 - 云主机自建：腾讯云服务器 CVM 上的自建数据库。
 - 专线/VPN 接入：通过专线/VPN 网关接入的自建数据库。
