--- a/product/存储与CDN/内容分发网络/产品介绍/产品动态.md
+++ b/product/存储与CDN/内容分发网络/产品介绍/产品动态.md
@@ -8,6 +8,8 @@ table th:nth-of-type(4){ width:19%; }
 ## 2021年09月
 | 动态名称 | 动态描述                                               | 发布时间   | 相关文档                                                     |
 | -------- | ------------------------------------------------------ | ---------- | ------------------------------------------------------------ |
+|支持中文域名转 punycode 码接入&支持含下划线域名接入|	支持中文域名转 punycode 接入，中文域名需先以中文形式备案，再通过第三方工具转码为 punycode 形式即可接入。含下划线域名可以直接添加。	|2021-09-16	|[接入域名-域名属性配置](https://cloud.tencent.com/document/product/228/41215)|
+|支持单一域名配置流量封顶|	新增域名配置流量封顶，与原“带宽封顶配置”合并，更名为“用量封顶配置”，可同步配置百分比告警阈值。原文档“带宽封顶配置”同步更新为“用量封顶配置”。|	2021-09-15|	[用量封顶配置](https://cloud.tencent.com/document/product/228/41733)|
 |带宽封顶配置支持设置百分比告警阈值|带宽封顶配置支持设置百分比告警阈值，当访问带宽/带宽阈值 的比值达到配置的告警阈值时，CDN 将发出告警消息。|2021-09-02 |[带宽封顶配置](https://cloud.tencent.com/document/product/228/41733)|
 
 
