--- a/product/云资源管理/云顾问/产品简介/产品概述.md
+++ b/product/云资源管理/云顾问/产品简介/产品概述.md
@@ -1,8 +1,8 @@
-云顾问（Tencent Cloud Advisor）是一款开箱即用的云资源风险评估产品。基于 [CAM 服务角色授权](https://cloud.tencent.com/document/product/598/19421#.E6.9C.8D.E5.8A.A1.E8.A7.92.E8.89.B2) 机制，一键分析云资源、应用架构、业务性能及安全方面存在的风险，并根据业务实际使用情况，在线提供优化建议，助您提升系统安全性、业务稳定性以及服务可靠性。
+云顾问（Tencent Smart Advisor）是一款开箱即用的云资源风险评估产品。基于 [CAM 服务角色授权](https://cloud.tencent.com/document/product/598/19421#.E6.9C.8D.E5.8A.A1.E8.A7.92.E8.89.B2) 机制，一键分析云资源、应用架构、业务性能及安全方面存在的风险，并根据业务实际使用情况，在线提供优化建议，助您提升系统安全性、业务稳定性以及服务可靠性。
 
 ## 功能介绍
 
-云顾问（Tencent Cloud Advisor）提供了丰富的评估项目、灵活的评估配置以及系统的优化建议，助您提升业务连续性。
+云顾问（Tencent Smart Advisor）提供了丰富的评估项目、灵活的评估配置以及系统的优化建议，助您提升业务连续性。
 
 #### 丰富的评估项目
 
