--- a/product/存储与CDN/对象存储 4.0/SDK文档/Go SDK/对象操作.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/Go SDK/对象操作.md
@@ -8,6 +8,7 @@
 | ------------------------------------------------------------ | -------------- | ----------------------------------------- |
 | [GET Bucket（List Objects）](https://cloud.tencent.com/document/product/436/7734) | 查询对象列表   | 查询存储桶下的部分或者全部对象            |
 | [PUT Object](https://cloud.tencent.com/document/product/436/7749) | 简单上传对象   | 上传一个 Object（文件/对象）至 Bucket     |
+| [APPEND Object](https://cloud.tencent.com/document/product/436/7741) | 追加上传对象   | 使用分块追加的方式上传对象    |
 | [HEAD Object](https://cloud.tencent.com/document/product/436/7745) | 查询对象元数据 | 查询 Object 的 Meta 信息                  |
 | [GET Object](https://cloud.tencent.com/document/product/436/7753) | 下载对象       | 下载一个 Object（文件/对象）至本地        |
 | [PUT Object - Copy](https://cloud.tencent.com/document/product/436/10881) | 设置对象复制   | 复制文件到目标路径                        |
@@ -63,7 +64,7 @@ if err != nil {
 ```go
     var marker string
     opt := &cos.BucketGetOptions{
-        Prefix:  "folder/",  // prefix表示要删除的文件夹
+        Prefix:  "folder/",  // prefix表示要查询的文件夹
         Delimiter: "/",		 // deliter表示分隔符, 设置为/表示列出当前目录下的object, 设置为空表示列出所有的object
         MaxKeys: 1000,       // 设置最大遍历出多少个对象, 一次listobject最大支持1000
     }
@@ -171,11 +172,18 @@ _, err = client.Object.Put(context.Background(), key, f, opt)
 if err != nil {
     panic(err)
 }
+
 // Case 2 使用 PUtFromFile 上传本地文件到COS
 filepath := "./test"
 _, err = client.Object.PutFromFile(context.Background(), key, filepath, opt)
 if err != nil {
     panic(err)
+}
+
+// Case 3 上传 0 字节文件, 设置输入流长度为 0 
+_, err = client.Object.Put(context.Background(), key, strings.NewReader(""), nil)
+if err != nil {
+    // ERROR
 }
 ```
 
@@ -366,6 +374,44 @@ exp := resp.Header.Get("x-cos-expiration")
 | ETag             | 上传文件的 MD5 值                | string |
 | x-cos-expiration | 设置生命周期后，返回文件过期规则 | string |
 
+### 追加上传对象
+
+#### 功能说明
+
+以分块追加的方式上传对象（APPEND Object）。
+
+#### 方法原型
+
+```go
+func (s *ObjectService) Append(ctx context.Context, name string, position int, r io.Reader, opt *ObjectPutOptions) (int, *Response, error)
+```
+#### 请求示例
+```go
+name := "exampleobject"
+pos, _, err := c.Object.Append(context.Background(), name, 0, strings.NewReader("test1"), opt)
+if err != nil {
+    // ERROR
+}
+_, _, err = c.Object.Append(context.Background(), name, pos, strings.NewReader("test2"), opt)
+if err != nil {
+    // ERROR
+}
+```
+#### 参数说明
+
+| 参数名称   | 参数描述                                                     | 类型   |
+| ---------- | ------------------------------------------------------------ | ------ |
+|  name      |  对象键（Key）是对象在存储桶中的唯一标识。例如，在对象的访问域名examplebucket-1250000000.cos.ap-guangzhou.myqcloud.com/doc/pic.jpg中，对象键为 doc/pic.jpg | string |
+|  position  |  追加操作的起始点，单位为字节。首次追加则设置 Position=0，后续追加则设置 Position 为当前 Object 的 content-length  | int |
+|  r         |  上传文件的内容，可以为文件流或字节流，当 r 不是bytes.Buffer/bytes.Reader/strings.Reader时，必须指定opt.ObjectPutHeaderOptions.ContentLength	| io.Reader |
+|  opt       |  上传参数，详见ObjectPutOptions | struct |
+
+#### 返回结果说明
+
+| 参数名称   | 参数描述                                                     | 类型   |
+| ---------- | ------------------------------------------------------------ | ------ |
+|  x-cos-next-append-position |  下一次追加操作的起始点，单位：字节	 | int |
+
 ### 查询对象元数据
 
 #### 功能说明
@@ -426,6 +472,7 @@ reqid := resp.Header.Get("X-Cos-Request-Id")
 | 参数名称   | 参数描述                                                     | 类型   |
 | ---------- | ------------------------------------------------------------ | ------ |
 | 文件元信息 | 获取文件的元信息，包括 Etag 和 X-Cos-Request-Id 等信息，也会包含设置的文件元信息 | string |
+
 
 ### 下载对象
 
@@ -503,7 +550,23 @@ func main() {
 }
 ```
 
-#### 请求示例3：获取下载进度
+#### 请求示例3：单链接限速
+```go
+
+key := "exampleobject"
+opt := &cos.ObjectGetOptions{
+    // 限速值设置范围为819200 - 838860800，即100KB/s - 100MB/s，如果超出该范围将返回400错误
+    XCosTrafficLimit: 819200,
+}
+// opt 可选，无特殊设置可设为 nil
+// 1. 从响应体中获取对象
+_, err := client.Object.GetToFile(context.Background(), key, "example.txt", opt)
+if err != nil {
+    panic(err)
+}
+```
+
+#### 请求示例4：获取下载进度
 
 Go SDK 通过回调的方式获取下载进度，用户需要自行实现 cos.ProgressListener 接口，接口定义如下：
 
@@ -683,6 +746,32 @@ if err == nil {
  		// Error
  	}
 }
+```
+
+#### 请求示例3：修改存储类型
+
+>!标准存储可以修改为低频存储、智能分层存储、归档存储和深度归档存储等，如果希望将归档存储或深度归档存储的对象修改为其他存储类型，首先需要使用 PostRestore 将归档存储或深度归档存储的对象回热，才能使用该接口请求修改存储类型；关于存储类型的详细说明请参见 [存储类型概述](https://cloud.tencent.com/document/product/436/33417)
+
+```go
+name := "exampleobject"
+// 上传源对象
+f := strings.NewReader("test")
+_, err := client.Object.Put(context.Background(), name, f, nil)
+assert.Nil(s.T(), err, "Test Failed")
+
+sourceURL := fmt.Sprintf("%s/%s", client.BaseURL.BucketURL.Host, name)
+opt := &cos.ObjectCopyOptions{
+    &cos.ObjectCopyHeaderOptions{
+        XCosMetadataDirective: "Replaced",
+        XCosStorageClass: "Archive",        // 修改成归档类型
+    },
+    nil,
+}
+_, _, err = client.Object.Copy(context.Background(), name, sourceURL, opt)
+if err != nil {
+    panic(err)
+}
+
 ```
 
 #### 参数说明
