--- a/product/云资源管理/云顾问/产品简介/产品概述.md
+++ b/product/云资源管理/云顾问/产品简介/产品概述.md
@@ -8,53 +8,21 @@
 
 从安全性、可靠、成本、服务限制、性能这几个维度覆盖多个云产品，每维度均包含多个风险评估项目。目前支持评估的云产品有：
 
-<table>
-   <tr>
-      <td>DDOS 防护（ANTIDDOS)  </td>
-   </tr>
-   <tr>
-      <td>弹性公网 IP（EIP) </td>
-   </tr>
-   <tr>
-      <td>Elasticsearch Service  </td>
-   </tr>
-   <tr>
-      <td>消息队列（TDMQ）</td>
-   </tr>
-   <tr>
-      <td>对象存储（COS）  </td>
-   </tr>
-   <tr>
-      <td>访问管理（CAM）  </td>
-   </tr>
-   <tr>
-      <td>内容分发网络（CDN)  </td>
-   </tr>
-   <tr>
-      <td>容器服务（TKE）  </td>
-   </tr>
-   <tr>
-      <td>云防火墙（CFW）  </td>
-   </tr>
-   <tr>
-      <td>云服务器（CVM）  </td>
-   </tr>
-   <tr>
-      <td>云数据库（MongoDB）  </td>
-   </tr>
-   <tr>
-      <td>云数据库（MySQL）  </td>
-   </tr>
-   <tr>
-      <td>云数据库（Redis）  </td>
-   </tr>
-   <tr>
-      <td>云数据库（TDSQL）  </td>
-   </tr>
-   <tr>
-      <td>云硬盘（CBS）  </td>
-   </tr>
-</table>
+- DDoS 防护（Anti-DDoS）
+- 弹性公网 IP（EIP）
+- Elasticsearch Service
+- 消息队列（TDMQ）
+- 对象存储（COS）
+- 访问管理（CAM）
+- 内容分发网络（CDN）
+- 容器服务（TKE）
+- 云防火墙（CFW）
+- 云服务器（CVM）
+- 云数据库（MongoDB）
+- 云数据库（MySQL）
+- 云数据库（Redis）
+- 云数据库（TDSQL）
+- 云硬盘（CBS）
 
 
 随着腾讯云产品的迭代，我们会逐步覆盖更多云产品，并提供更多的风险评估项目。
