--- a/product/移动与通信/版权音乐助手/购买指南.md
+++ b/product/移动与通信/版权音乐助手/购买指南.md
@@ -20,7 +20,7 @@
 <tbody><tr>
 <td nowrap="nowrap">原创内容作者、<br>MCN 机构、<br>互联网平台、<br>工具厂商</td>
 <td>图文/音频/视频内容配乐</td>
-<td><li>中国境内/1年：800；中国境内/永久：1000<br><li>全球/1年：1000；全球/永久：1200</td>
+<td><li>中国大陆/1年：800；中国大陆/永久：1000<br><li>全球/1年：1000；全球/永久：1200</td>
 </tr>
 <tr>
 <td>游戏开发商</td>
@@ -30,17 +30,17 @@
 <tr>
 <td>电商商家</td>
 <td>网店网站装饰配乐</td>
-<td><li>中国境内/1年：800；中国境内/永久：950<br><li>全球/1年：950；全球/永久：1150</td>
+<td><li>中国大陆/1年：800；中国大陆/永久：950<br><li>全球/1年：950；全球/永久：1150</td>
 </tr>
 <tr>
 <td>广告媒体组织</td>
 <td>网络宣传广告制作配乐</td>
-<td><li>中国境内/1年：800；中国境内/永久：950<br><li>全球/1年：950；全球/永久：1150</td>
+<td><li>中国大陆/1年：800；中国大陆/永久：950<br><li>全球/1年：950；全球/永久：1150</td>
 </tr>
 <tr>
 <td>影视传媒公司</td>
 <td>网络剧/综艺配乐</td>
-<td><li>中国境内/1年：1000；中国境内/永久：1200<br><li>全球/1年：1200；全球/永久：1400</td>
+<td><li>中国大陆/1年：1000；中国大陆/永久：1200<br><li>全球/1年：1200；全球/永久：1400</td>
 </tr>
 </tbody></table>
 :::
@@ -84,7 +84,7 @@
 </tr>
 <tr>
 <td>商用 B<br>曲库包</td>
-<td>图文/音频/视频内容创作配乐/铃声
+<td>图文/音频/视频内容创作配乐
 </td>
 <td>&#10003;</td>
 </tr>
