--- a/product/移动与通信/版权音乐助手/购买指南.md
+++ b/product/移动与通信/版权音乐助手/购买指南.md
@@ -25,7 +25,7 @@
 <tr>
 <td>游戏开发商</td>
 <td>游戏大厅/商城/小屋/对战/资源<br>更新等多场景配乐</td>
-<td><li>中国境内/1年：800；中国境内/永久：1000<br><li>全球/1年：1000；全球/永久：1200</td>
+<td><li>中国大陆/1年：800；中国大陆/永久：1000<br><li>全球/1年：1000；全球/永久：1200</td>
 </tr>
 <tr>
 <td>电商商家</td>
