--- a/product/安全服务/网站管家/操作指南/访问日志（新）.md
+++ b/product/安全服务/网站管家/操作指南/访问日志（新）.md
@@ -7,7 +7,7 @@
 
 ## 操作步骤[](id:sysm)
 ### 启用访问日志
-登录 [Web 应用防火墙控制台](https://console.cloud.tencent.com/guanjia/waf/config)，在左侧导航栏中，选择【实例管理】>【域名列表】，进入域名列表页面，在域名列表中选择域名，单击开启访问日志开关。 
+登录 [Web 应用防火墙控制台](https://console.cloud.tencent.com/guanjia/waf/config)，在左侧导航栏中，选择【实例管理】>【域名接入】，进入域名接入页面，在域名列表中选择域名，单击开启访问日志开关。 
 ![](https://main.qcloudimg.com/raw/a455217d951b93b8a9b2d73dccce02f7.png)
 
 ### 查看日志
