--- a/product/数据库/云数据库MySQL/动态与公告/公告/参数模版及新购实例优化.md
+++ b/product/数据库/云数据库MySQL/动态与公告/公告/参数模版及新购实例优化.md
@@ -1,5 +1,7 @@
 
-云数据库 MySQL 将于2021年09月30日起，进行参数相关能力以及发货流程的优化。本次优化涉及参数模版创建、参数对比、参数模版应用、参数修改等能力、可修改参数以及新购实例优化的更新。
+云数据库 MySQL 将于2021年10月18日起，进行参数相关能力以及发货流程的优化。本次优化涉及参数模版创建、参数对比、参数模版应用、参数修改等能力、可修改参数以及新购实例优化的更新。
+
+>?该参数相关能力以及发货流程的优化，将于2021年9月24日先开启内测，如需提前体验可 [提交工单](https://console.cloud.tencent.com/workorder/category) 进行申请。
 
 ## 参数模版优化
 ### 参数模版创建
